Tooltip: change functions, fix working on ios

--- a/_sass/components/tooltip.scss
+++ b/_sass/components/tooltip.scss
@@ -87,3 +87,7 @@
     }
   }
 }
+
+div.opened {
+  display: block;
+}
